# VSR-Docs

./: README.md
Docs/: API-0.1.md
Examples/: CMakeLists.txt  demos.c  helpers.c  helpers.h  millionCubeStressTest.c
Examples/Assets/: cube.h  teapot.h
Examples/CubeDemo/: cubeDemo.h  frag.spv
Examples/LightingDemo/: frag.spv  lightingDemo.h  shader.frag  shader.vert  vert.spv
Examples/MorphDemo/: frag.spv  morphDemo.h  shader.frag  shader.vert  vert.spv
Examples/ShadowDemo/: frag.spv  shader.frag  shader.vert  shadow.frag  shadow.vert  shadowDemo.h  shadowFrag.spv  shadowVert.spv  vert.spv
